docs/errors/examples/named-argument-names-required-parameter/named-argument-names-required-parameter.expected.txt
error[E0009]: named argument names a required parameter
  --> named-argument-names-required-parameter.grob:7:13
   |
 7 | print(power(base: 5))
   |             ^^^^
   |
   = note: parameter 'base' has no default value and must be passed positionally
   = help: pass 'base' as a positional argument
